# COMP3320

./: .gitignore  CMakeLists.txt  README.md  graphics.sublime-project  graphics.sublime-workspace
assets/: CMakeLists.txt
assets/15_assimp/: CMakeLists.txt  README.md  assimp.cpp
assets/15_assimp/shaders/assimp/: assimp.frag
assets/16_openal/: CMakeLists.txt  openal.cpp
assets/assimp/: CMakeLists.txt  README.md  assimp.cpp
assets/assimp/shaders/: assimp.frag
assets/openal/: CMakeLists.txt  README.md  openal.cpp
assets/openal/shaders/: openal.vert
cmake/Modules/: CopyFiles.cmake  FindGLAD.cmake  FindLame.cmake  FindMPG123.cmake  FindSOIL.cmake
depthAndStencil/depth/: depth.cpp  makefile  vertexShader.glsl
depthAndStencil/stencil/: fragmentShader.glsl  makefile  stencil.cpp  vertexShader.glsl
desphere/: desphere.cpp  desphere.fs  desphere.glsl  desphere.vs  makefile
hello_attributes/: CMakeLists.txt  hello_attributes.cpp  hello_attributes.frag  hello_attributes.vert
hello_indexing/: CMakeLists.txt  hello_indexing.cpp  hello_indexing.frag
hello_movement/: CMakeLists.txt  hello_movement.cpp
hello_multi_cube/: CMakeLists.txt  hello_multi_cube.cpp
hello_mvp/: CMakeLists.txt  hello_mvp.cpp
hello_opengl/: CMakeLists.txt  hello_opengl.cpp
hello_textures/: CMakeLists.txt  hello_textures.cpp
hello_textures/shaders/: hello_textures.vert
hello_transforms/: CMakeLists.txt  hello_transforms.cpp
hello_transforms/shaders/: hello_transforms.vert
hello_triangle/: CMakeLists.txt  hello_triangle.cpp
hello_uniforms/: CMakeLists.txt  hello_uniforms.cpp
introduction/: CMakeLists.txt  README.md
introduction/01_basics/: README.md
introduction/03_indexing/: CMakeLists.txt
introduction/04_uniforms/: README.md  uniforms.cpp
introduction/04_uniforms/shaders/uniforms/: uniforms.frag
introduction/05_attributes/shaders/attributes/: attributes.frag
introduction/06_textures/: CMakeLists.txt
introduction/07_transforms/: CMakeLists.txt  README.md
introduction/07_transforms/shaders/transforms/: transforms.vert
introduction/08_mvp/: CMakeLists.txt  README.md  mvp.cpp
introduction/09_multi_cube/: README.md  multi_cube.cpp
introduction/10_movement/: CMakeLists.txt
introduction/10_movement/shaders/movement/: movement.frag
introduction/attributes/: CMakeLists.txt  README.md  attributes.cpp
introduction/basics/: CMakeLists.txt  basics.cpp
introduction/indexing/: CMakeLists.txt  README.md  indexing.cpp
introduction/movement/: CMakeLists.txt  README.md  movement.cpp
introduction/movement/shaders/: movement.frag
introduction/multi_cube/: CMakeLists.txt  multi_cube.cpp
introduction/mvp/: CMakeLists.txt  mvp.cpp
introduction/mvp/shaders/: mvp.vert
introduction/textures/: CMakeLists.txt  README.md  textures.cpp
introduction/transforms/: CMakeLists.txt  transforms.cpp
introduction/triangle/: CMakeLists.txt  README.md  triangle.cpp
introduction/triangle/shaders/triangle/: triangle.frag  triangle.vert
introduction/uniforms/: CMakeLists.txt  uniforms.cpp
introduction/uniforms/shaders/: uniforms.frag
lighting/: CMakeLists.txt
lighting/11_phong/shaders/phong/: phong.vert
lighting/12_materials/: CMakeLists.txt  README.md
lighting/13_maps/: CMakeLists.txt  README.md
lighting/14_casters/: casters.cpp
lighting/14_casters/shaders/casters/: casters.frag  casters.vert
lighting/casters/: CMakeLists.txt  README.md  casters.cpp
lighting/casters/shaders/: casters.frag  casters.vert
lighting/maps/: CMakeLists.txt  maps.cpp
lighting/maps/shaders/: maps.frag  maps.vert
lighting/materials/: CMakeLists.txt  README.md  materials.cpp
lighting/materials/shaders/: materials.frag  materials.vert
lighting/materials/shaders/materials/: materials.frag  materials.vert
lighting/phong/: CMakeLists.txt  README.md  phong.cpp
lighting/phong/shaders/: phong.frag
polygons/colours/: colours.cpp  makefile
polygons/elementBuffers/: elementBuffers  elementBuffers.cpp  fragmentShader.glsl  makefile  vertexShader.glsl
polygons/uniforms/: fragmentShader.glsl  makefile  uniforms  uniforms.cpp
polygons/vertices/: fragmentShader.glsl  makefile  vertexShader.glsl  vertices  vertices.cpp
slides/00_overview/: .latexmkrc  overview.tex
slides/01_basics/: .latexmkrc  basics.tex
slides/02_rendering/: .latexmkrc  rendering.tex
slides/03_shaders/: .latexmkrc  shaders.tex
slides/04_attributes/: .latexmkrc  attributes.tex
slides/05_lighting/: .latexmkrc  lighting.tex
slides/06_assets/: .latexmkrc  assets.tex
slides/07_more_lighting/: .latexmkrc  more_lighting.tex
slides/07_more_lighting/images/: maps.blend
slides/attributes/: attributes.tex
slides/basics/: basics.tex
slides/rendering/: rendering.tex
slides/shaders/: shaders.tex
template/: makefile  template  template.cpp
textures/multipleTextures/: fragmentShader.glsl  makefile  multipleTextures.cpp
textures/texturedQuad/: fragmentShader.glsl  makefile  texturedQuad.cpp  vertexShader.glsl
textures/wavingGrass/: fragment.glsl  grass.glsl  ground-vertex.glsl  makefile  pass-through-vertex.glsl  wavingGrass.cpp
transformations/3D/: 3D.cpp  makefile  vertexShader.glsl
transformations/3D_timed/: 3D.cpp
transformations/simple/: simple.cpp  vertexShader.glsl
transformations/simple_timed/: makefile  simple.cpp
utility/: camera.hpp  mesh.hpp  model.hpp  openal_error_category.hpp  openal_utils.hpp  opengl_error_category.hpp  opengl_utils.hpp  shader_utils.hpp  sndfile_error_category.hpp  vertex.hpp
