ADD_EXECUTABLE(hello_opengl hello_opengl.cpp)
SET_TARGET_PROPERTIES(hello_opengl
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
TARGET_INCLUDE_DIRECTORIES(hello_opengl PRIVATE ${GLAD_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(hello_opengl glfw ${GLAD_LIBRARIES} fmt::fmt)

IF(UNIX)
    TARGET_LINK_LIBRARIES(hello_opengl ${CMAKE_DL_LIBS})
ENDIF(UNIX)
