# Add tutorials
add_subdirectory(01_basics)

add_subdirectory(02_triangle)

add_subdirectory(03_indexing)

add_subdirectory(04_uniforms)

add_subdirectory(05_attributes)

add_subdirectory(06_textures)

add_subdirectory(07_transforms)

add_subdirectory(08_mvp)

add_subdirectory(09_multi_cube)

add_subdirectory(10_movement)
